# kwp2000_client

./: build.py  kwp2000_client.py  main.py  pyproject.toml  requirements.txt
core/: kwp2000.py
gui/: gui.py
src/ytdlp_gui/: __init__.py  main.py
src/ytdlp_gui/core/: cookie_manager.py  download_manager.py  format_detector.py  history_manager.py  kwp2000_client.py  settings_manager.py
src/ytdlp_gui/gui/: main_window.py
src/ytdlp_gui/gui/components/: __init__.py  download_options.py  download_queue.py  format_selector.py  output_selector.py  progress_display.py  simple_url_input.py  url_input.py  video_preview.py
src/ytdlp_gui/utils/: logger.py  notifications.py
