[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-dlp-gui"
version = "1.0.0"
description = "GUI for yt-dlp video downloader"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Danil Borkov", email = "vokrob.dev@gmail.com"}
]
requires-python = ">=3.9"
dependencies = [
    "yt-dlp>=2025.07.01",
    "customtkinter>=5.3.0",
    "pillow>=11.0.0",
    "requests>=2.32.0",
    "packaging>=24.0",
    "psutil>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=5.0",
]

[project.scripts]
yt-dlp-gui = "ytdlp_gui.main:main"

[project.urls]
Homepage = "https://github.com/vokrob/yt-dlp-gui"
Repository = "https://github.com/vokrob/yt-dlp-gui"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ytdlp_gui = ["assets/*"]


